--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Roger LeMesurier</h1>
 
-<p>My first paragraph.</p>
+<p>Current Status</p>
+
 
 </body>
 </html>
