--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <div class="wrapper">
 
-<h1>Roger LeMesurier</h1>
-<h4>Engineering, Sales, Ops</h4>
-<p>Current Status</p>
+    <div class="left">
+      <img class="profile-picture" src="img/profile.jpg" width="200"/>
+      <h1 class="name">Roger LeMesurier</h1>
+      <h4 class="subtitle">Engineering, Ops, Sales</h4>
+    </div>
 
+    <div class="right">
+      <p class="bio">
+        Engineer, presenter, tinkerer, learner.
+      </p>
+      <ul class="social-links">
+        <li><a href="https://github.com/presentingroger">Github</a></li>
+        <li><a href="https://twitter.com/presentingroger">Twitter</a></li>
+      </ul>
+    </div>
 
+  </div>
 </body>
 </html>
