--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </p>
       <ul class="social-links">
         <li><a href="https://github.com/presentingroger">Github</a></li>
-        <li><a href="https://twitter.com/presentingroger">Twitter</a></li>
+        <li><a href="https://twitter.com/rogerlemesurier">Twitter</a></li>
       </ul>
     </div>
 
