--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <div class="left">
       <img class="profile-picture" src="../img/pr.jpg" width="600"/>
       <h1 class="name">Roger LeMesurier</h1>
-      <h4 class="subtitle">Engineering, Ops, Sales</h4>
+      <h4 class="subtitle">Engineering, Ops, Sales, Data</h4>
     </div>
 
     <div class="right">
