SF in heading and more social media

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <img class="profile-picture" src="../img/pr.jpg" width="600"/>
       <h1 class="name">Roger LeMesurier</h1>
       <h4 class="subtitle">Engineering, Ops, Sales, Data</h4>
+      <h4 class="subtitle">San Francisco, CA</h4>
     </div>
 
     <div class="right">
@@ -15,7 +16,9 @@
       </p>
       <ul class="social-links">
         <li><a href="https://github.com/presentingroger">Github</a></li>
+        <li><a href="http://linkedin.com/in/presentingroger">LinkedIn</a></li>
         <li><a href="https://angellist.com/presentingroger">Angellist</a></li>
+        <li><a href="https://stackoverflow.com/users/3791969/roger-l">Stack Overflow</a></li>
         <li><a href="https://twitter.com/rogerlemesurier">Twitter</a></li>
       </ul>
     </div>
