Spotify playlist added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="https://angellist.com/presentingroger">Angellist</a></li>
         <li><a href="https://stackoverflow.com/users/3791969/roger-l">Stack Overflow</a></li>
         <li><a href="https://twitter.com/rogerlemesurier">Twitter</a></li>
+        <li><a href="https://open.spotify.com/playlist/32EIHkTqqnQ2eMMPIVX2ko">A playlist for you</a></li>
       </ul>
     </div>
 
