--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/presentingroger/presentingroger.github.io/master/ico/favicon.ico">
+</head>
 <body>
   <div class="wrapper">
 
