--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
 	<div class="container">
 		<div class="hero">
-			<h1 class="name"><strong>Abbie</strong> Bradley</h1>
-			<span class="job-title">Developer</span>
-			<span class="email">abbie.bradley@gmail.com</span>
+			<h1 class="name"><strong>Roger</strong> LeMesurier</h1>
+			<span class="job-title">Mechanical Engineer</span>
+			<span class="email">roger.lemesurier@gmail.com</span>
 
-			<h2 class="lead">Development and design of web applications 
-for startups and large companies</h2>
+			<h2 class="lead">Engineering, analysis, and relationship management</h2>
 		</div>
 	</div>
 
@@ -31,15 +30,15 @@ for startups and large companies</h2>
 					<span>PHP, Symfony, Laravel, Silex, …</span>
 				</div>
 			</div>
-			
+
 			<div class="list-card">
 				<span class="exp">+ 3 years</span>
 				<div>
 					<h3>Design integration</h3>
 					<span>Style and tools, JS Frameworks</span>
 				</div>
-			</div>	
-					
+			</div>
+
 			<div class="list-card">
 				<span class="exp">+ 6 years</span>
 				<div>
@@ -52,27 +51,27 @@ for startups and large companies</h2>
 		</div>
 		<div class="sections">
 				<h2 class="section-title">Interests</h2>
-				
+
 				<div class="list-card">
 					<div>
 						<h3>Scripting languages</h3>
 						<span>PHP, JS, Bash, Python</span>
 					</div>
-				</div>	
+				</div>
 
 				<div class="list-card">
 					<div>
 						<h3>Hacking</h3>
 						<span>Linux, Crawlers, Bots, Network</span>
 					</div>
-				</div>		
+				</div>
 		</div>
 	</div>
 
 	<!-- Achievements -->
 
 	<div class="container cards">
-		
+
 		<div class="card">
 			<div class="skill-level">
 				<span>+</span>
@@ -85,7 +84,7 @@ for startups and large companies</h2>
 			</div>
 		</div>
 
-			
+
 		<div class="card">
 			<div class="skill-level">
 				<h2>50</h2>
@@ -98,7 +97,7 @@ for startups and large companies</h2>
 			</div>
 		</div>
 
-			
+
 		<div class="card">
 			<div class="skill-level">
 				<h2>30</h2>
