--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Minimal Resume Template</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/presentingroger/presentingroger.github.io/master/ico/favicon.ico">
 </head>
 <body>
 
