--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			<div class="list-card">
 				<span class="exp">+ 5 years</span>
 				<div>
-					<h3>Object programming & frameworks</h3>
-					<span>PHP, Symfony, Laravel, Silex, …</span>
+					<h3>Hardware development and roll-out</h3>
+					<span>Design, manufacturing, production</span>
 				</div>
 			</div>
 
@@ -41,10 +41,10 @@
 			</div>
 
 			<div class="list-card">
-				<span class="exp">+ 6 years</span>
+				<span class="exp">+ 8 years</span>
 				<div>
-					<h3>Linux</h3>
-					<span>Scripting, Servers management and protocols, Automation</span>
+					<h3>Public speaking, education</h3>
+					<span>S</span>
 				</div>
 			</div>
 
