--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<div class="hero">
 			<h1 class="name"><strong>Roger</strong> LeMesurier</h1>
-			<span class="job-title">Mechanical Engineer</span>
+			<span class="job-title">Sales Engineer</span>
 			<span class="email">roger.lemesurier@gmail.com</span>
 
 			<h2 class="lead">Engineering, analysis, and relationship management</h2>
