--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<h2 class="section-title">Skills</h2>
 
 			<div class="list-card">
-				<span class="exp">+ 5 years</span>
+				<span class="exp">+ 4 years</span>
 				<div>
 					<h3>Hardware development and roll-out</h3>
 					<span>Design, manufacturing, production</span>
@@ -35,16 +35,16 @@
 			<div class="list-card">
 				<span class="exp">+ 3 years</span>
 				<div>
-					<h3>Design integration</h3>
-					<span>Style and tools, JS Frameworks</span>
+					<h3>Ops and customer service</h3>
+					<span></span>
 				</div>
 			</div>
 
 			<div class="list-card">
-				<span class="exp">+ 8 years</span>
+				<span class="exp">+ 6 years</span>
 				<div>
-					<h3>Public speaking, education</h3>
-					<span>S</span>
+					<h3>Professional communication</h3>
+					<span>Public speaker, educator, crisis counselor</span>
 				</div>
 			</div>
 
