--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<span class="exp">+ 3 years</span>
 				<div>
 					<h3>Ops and customer service</h3>
-					<span></span>
+					<span>Field engineering, data analysis, customer solutions</span>
 				</div>
 			</div>
 
