--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<div class="hero">
 			<h1 class="name"><strong>Roger</strong> LeMesurier</h1>
-			<span class="job-title">Sales Engineer</span>
+			<span class="job-title">Sales engineer</span>
 			<span class="email">roger.lemesurier@gmail.com</span>
 
 			<h2 class="lead">Engineering, analysis, and relationship management</h2>
@@ -27,7 +27,7 @@
 			<div class="list-card">
 				<span class="exp">+ 4 years</span>
 				<div>
-					<h3>Hardware development and roll-out</h3>
+					<h3>Hardware development & delivery</h3>
 					<span>Design, manufacturing, production</span>
 				</div>
 			</div>
@@ -44,7 +44,7 @@
 				<span class="exp">+ 6 years</span>
 				<div>
 					<h3>Professional communication</h3>
-					<span>Public speaker, educator, crisis counselor</span>
+					<span>Public speaker, educator, teen crisis counselor</span>
 				</div>
 			</div>
 
@@ -55,15 +55,15 @@
 
 				<div class="list-card">
 					<div>
-						<h3>Scripting languages</h3>
-						<span>PHP, JS, Bash, Python</span>
+						<h3></h3>
+						<span>Team dynamics,people management</span>
 					</div>
 				</div>
 
 				<div class="list-card">
 					<div>
-						<h3>Hacking</h3>
-						<span>Linux, Crawlers, Bots, Network</span>
+						<h3>f</h3>
+						<span>f</span>
 					</div>
 				</div>
 		</div>
