--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 
 				<div class="list-card">
 					<div>
-						<h3></h3>
+						<h3>Human capital</h3>
 						<span>Team dynamics,people management</span>
 					</div>
 				</div>
 
 				<div class="list-card">
 					<div>
-						<h3>f</h3>
-						<span>f</span>
+						<h3>Customer success</h3>
+						<span>Relationship building, solution engineering</span>
 					</div>
 				</div>
 		</div>
