--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div class="list-card">
 					<div>
 						<h3>Human capital</h3>
-						<span>Team dynamics,people management</span>
+						<span>People management, team dynamics</span>
 					</div>
 				</div>
 
