--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
 		    <p class="line">Experiences</p>
 		    <span class="point"></span>
 		    <p class="description">
-		      Lead Developer @Geronimo
+		      Lead engineer, first hire @XStream
 		    </p>
-		    <span class="date">Today - Apr. 2016</span>
+		    <span class="date">Jan 2020 - Apr. 2015</span>
 		  </li>
 
 		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      Freelance
+		      Robot technician
 		    </p>
-		    <span class="date">Apr. 2016 - Sep. 2015</span>
+		    <span class="date">Apr. 2015 - Dec 2014</span>
 		  </li>
 
 		  		  <li>
