--- a/index.html
+++ b/index.html
@@ -151,17 +151,17 @@
 		    <p class="line">Education</p>
 		    <span class="point"></span>
 		    <p class="description">
-		      DUT "Métiers du multimédia et de l'internet"
+		      Codecademy datascience track
 		    </p>
-		    <span class="date">2015 - 2013</span>
+		    <span class="date">2020</span>
 		  </li>
 
 		  		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      Art & Design studies
+		      BSME Mechanical Engineering
 		    </p>
-		    <span class="date">2013 - 2008</span>
+		    <span class="date">2014 - 2010</span>
 		  </li>
 		</ol>
 
