--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		    <p class="line">Education</p>
 		    <span class="point"></span>
 		    <p class="description">
-		      Codecademy data science track
+		      Data Science track, Codecademy
 		    </p>
 		    <span class="date">2020</span>
 		  </li>
@@ -159,7 +159,7 @@
 		  		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      BSME Mechanical Engineering
+		      B.S. Mechanical Engineering, UC Davis
 		    </p>
 		    <span class="date">2014 - 2010</span>
 		  </li>
