UC Davis formatting

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		  		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      B.S. Mechanical Engineering, UC Davis
+		      UC Davis B.S. Mechanical Engineering 
 		    </p>
 		    <span class="date">2014 - 2010</span>
 		  </li>
