attempt line break in timeline entry title

--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
 		  		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      UC Davis B.S. Mechanical Engineering 
+		      UC Davis B.S.
+					Mechanical Engineering 
 		    </p>
 		    <span class="date">2014 - 2010</span>
 		  </li>
