--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 		  		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      UC Davis B.S.l
-					Mechanical Engineering
+		      UC Davis <br>
+					B.S. Mechanical Engineering
 		    </p>
 		    <span class="date">2014 - 2010</span>
 		  </li>
