more timeline formatting

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 		    <p class="line">Education</p>
 		    <span class="point"></span>
 		    <p class="description">
-		      Data Science track, Codecademy
+		      Data Science with Python<br>
+					Codecademy
 		    </p>
 		    <span class="date">2020</span>
 		  </li>
@@ -159,8 +160,8 @@
 		  		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      UC Davis <br>
-					B.S. Mechanical Engineering
+		      Mechanical Engineering <br>
+					B.S., UC Davis
 		    </p>
 		    <span class="date">2014 - 2010</span>
 		  </li>
