More line breaks (yay!)

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 		    <span class="point"></span>
 		    <p class="description">
 		      Robot technician
+					Greenbotics [Sunpower]
 		    </p>
 		    <span class="date">Apr. 2015 - Dec 2014</span>
 		  </li>
