--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      Robot technician
+		      <b>Robot technician</b> <br>
 					Greenbotics [Sunpower]
 		    </p>
 		    <span class="date">Apr. 2015 - Dec 2014</span>
