multiple experience points; italics

--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
 		    <span class="date">Apr. 2015 - Dec 2014</span>
 		  </li>
 
+			<li>
+				<span class="point"></span>
+				<p class="description">
+					<i>Robot technician</i> <br>
+					Greenbotics [Sunpower]
+				</p>
+				<span class="date">Apr. 2015 - Dec 2014</span>
+			</li>
+
 		  		  <li>
 		    <p class="line">Education</p>
 		    <span class="point"></span>
