--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	<div class="container">
 		<ol class="timeline">
 		  <li>
-		    <p class="line">Experiences</p>
+		    <p class="line">1Experiences</p>
 		    <span class="point"></span>
 		    <p class="description">
 		      Lead engineer, first hire @XStream
