--- a/index.html
+++ b/index.html
@@ -131,30 +131,22 @@
 	<div class="container">
 		<ol class="timeline">
 		  <li>
-		    <p class="line">1Experiences</p>
+		    <p class="line">Experiences</p>
 		    <span class="point"></span>
 		    <p class="description">
-		      Lead engineer, first hire @XStream
-		    </p>
-		    <span class="date">Jan 2020 - Apr. 2015</span>
-		  </li>
-
-		  <li>
-		    <span class="point"></span>
-		    <p class="description">
-		      <b>Robot technician</b> <br>
-					Greenbotics [Sunpower]
-		    </p>
-		    <span class="date">Apr. 2015 - Dec 2014</span>
+					Field engineering, customer support<br>
+					@XStream Trucking
+				</p>
+		    <span class="date">Jan 2020 - Jul. 2018</span>
 		  </li>
 
 			<li>
 				<span class="point"></span>
 				<p class="description">
-					<i>Robot technician</i> <br>
-					Greenbotics [Sunpower]
+					Lead engineer, first hire <br>
+					@XStream Trucking
 				</p>
-				<span class="date">Apr. 2015 - Dec 2014</span>
+				<span class="date">Jul. 2018 - Apr. 2015</span>
 			</li>
 
 		  		  <li>
