abbrev on field engineering

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		    <p class="line">Experiences</p>
 		    <span class="point"></span>
 		    <p class="description">
-					Field engineering, customer support<br>
+					Field eng., customer support<br>
 					@XStream Trucking
 				</p>
 		    <span class="date">Jan 2020 - Jul. 2018</span>
