--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 	</div>
 
-	<!-- Timeeline -->
+	<!-- Timeline -->
 
 	<div class="container">
 		<ol class="timeline">
@@ -134,7 +134,7 @@
 		    <p class="line">Experiences</p>
 		    <span class="point"></span>
 		    <p class="description">
-					Field eng., customer support<br>
+					Field eng., Customer support<br>
 					@XStream Trucking
 				</p>
 		    <span class="date">Jan 2020 - Jul. 2018</span>
@@ -176,6 +176,8 @@
 
 
 	<footer class="container">
+		<br>
+		<br>
 		<span style="font-size: 16px; margin-top: ">Coded by <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a></span>
 	</footer>
 
