--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Minimal Resume Template</title>
+	<title>Roger LeMesurier</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="https://raw.githubusercontent.com/presentingroger/presentingroger.github.io/master/ico/favicon.ico">
