--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
 
 				<div class="list-card">
 					<div>
+						<h3>EVs and Energy systems</h3>
+						<span>Transportation, grid storage</span>
+					</div>
+				</div>
+
+				<div class="list-card">
+					<div>
 						<h3>Customer success</h3>
 						<span>Relationship building, solution engineering</span>
 					</div>
@@ -66,6 +73,7 @@
 						<span>People management, team dynamics</span>
 					</div>
 				</div>
+
 		</div>
 	</div>
 
