--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 	<!-- Achievements -->
 
-	<div class="container cards">
+<!--	<div class="container cards">
 
 		<div class="card">
 			<div class="skill-level">
@@ -132,7 +132,7 @@
 			</div>
 		</div>
 
-	</div>
+	</div> -->
 
 	<!-- Timeline -->
 
@@ -142,8 +142,9 @@
 		    <p class="line">Experiences</p>
 		    <span class="point"></span>
 		    <p class="description">
-					Field eng., Customer support<br>
-					@XStream Trucking
+					Field ops<br>
+					Customer support<br>
+					Data analyisis
 				</p>
 		    <span class="date">Jan 2020 - Jul. 2018</span>
 		  </li>
@@ -186,7 +187,7 @@
 	<footer class="container">
 		<br>
 		<br>
-		<span style="font-size: 8px; margin-top: ">Coded by <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a></span>
+		<span style="font-size: 10px; margin-top: ">Coded by <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a></span>
 	</footer>
 
 
