--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<div class="list-card">
 					<div>
 						<h3>Customer success</h3>
-						<span>Relationship building, solution engineering</span>
+						<span>Relationship building, solutions engineering</span>
 					</div>
 				</div>
 
@@ -79,8 +79,8 @@
 
 	<!-- Achievements -->
 
-<!--	<div class="container cards">
-
+	<div class="container cards">
+<!--
 		<div class="card">
 			<div class="skill-level">
 				<span>+</span>
@@ -131,8 +131,8 @@
 				<span>Web projects and ensure the quality of delivery</span>
 			</div>
 		</div>
-
-	</div> -->
+-->
+	</div>
 
 	<!-- Timeline -->
 
