--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<span class="job-title">Sales engineer</span>
 			<span class="email">roger.lemesurier@gmail.com</span>
 
-			<h2 class="lead">Engineering, analysis, and relationship management</h2>
+			<h2 class="lead">1Engineering, analysis, and relationship management</h2>
 		</div>
 	</div>
 
