--- a/index.html
+++ b/index.html
@@ -81,6 +81,17 @@
 
 	<div class="container cards">
 		<br>
+		<div class="card">
+			<div class="skill-level">
+				<span></span>
+				<h2>See</h2>
+			</div>
+
+			<div class="skill-meta">
+				<h3>My resume</h3>
+				<span>here</span>
+			</div>
+		</div>
 		<br>
 <!--
 		<div class="card">
