--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 		<div class="card">
 			<div class="skill-level">
 				<span></span>
-				<h2>See</h2>
+				<h2>Resume</h2>
 			</div>
 
 			<div class="skill-meta">
-				<h3>My resume</h3>
-				<span>here</span>
+				<h3></h3>
+				<span></span>
 			</div>
 		</div>
 		<br>
