--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
 				<span></span>
 			</div>
 		</div>
+		<div class="card">
+			<div class="skill-level">
+				<span></span>
+				<h2>Portfolio</h2>
+			</div>
+
+			<div class="skill-meta">
+				<h3></h3>
+				<span></span>
+			</div>
+		</div>
 		<br>
 <!--
 		<div class="card">
