--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</div>
 
 			<div class="skill-meta">
-				<h3></h3>
+				<h3>Resume</h3>
 				<span></span>
 			</div>
 		</div>
@@ -99,7 +99,7 @@
 			</div>
 
 			<div class="skill-meta">
-				<h3></h3>
+				<h3>Portfolio</h3>
 				<span></span>
 			</div>
 		</div>
