--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<span class="exp">+ 6 years</span>
 				<div>
 					<h3>Professional communication</h3>
-					<span>Public speaker, educator, teen crisis counselor</span>
+					<span>Public speaker, tutor, teen crisis counselor</span>
 				</div>
 			</div>
 
@@ -78,14 +78,16 @@
 	</div>
 
 	<!-- Achievements -->
-
-	<div class="container cards">
-		<br>
-		<div class="card">
-			<div class="skill-level">
-				<span></span>
-				<h2>Resume</h2>
-			</div>
+<!--
+	<a href="http://example.com">
+		<div class="container cards">
+			<br>
+			<div class="card">
+				<div class="skill-level">
+					<span></span>
+					<h2>Resume</h2>
+				</div>
+	</a>
 
 			<div class="skill-meta">
 				<h3>Resume</h3>
@@ -95,16 +97,15 @@
 		<div class="card">
 			<div class="skill-level">
 				<span></span>
-				<h2>Portfolio</h2>
+				<h2></h2>
 			</div>
 
 			<div class="skill-meta">
-				<h3>Portfolio</h3>
+				<h3></h3>
 				<span></span>
 			</div>
 		</div>
 		<br>
-<!--
 		<div class="card">
 			<div class="skill-level">
 				<span>+</span>
