--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
 
 		</div>
 	</div>
-<br>
-<br>
+
 	<!-- Achievements -->
 
-	<a href="https://www.dropbox.com/s/2q63r47dupgfi48/200403%20Roger%20Sales%20Engineering.pdf?dl=0">
+	<a href="https://github.com/presentingroger/presentingroger.github.io/raw/master/English%20Resume%20Roger%20LeMesurier.pdf">
 		<div class="container cards">
 			<br>
 			<div class="card">
@@ -106,7 +105,7 @@
 				<span></span>
 			</div>
 		</div>
-		<br>
+<!--
 		<div class="card">
 			<div class="skill-level">
 				<span>+</span>
@@ -159,8 +158,9 @@
 		</div>
 
 	</div>
+	-->
 <br>
-<br>
+
 	<!-- Timeline -->
 
 	<div class="container">
