--- a/index.html
+++ b/index.html
@@ -81,19 +81,17 @@
 
 	<a href="https://github.com/presentingroger/presentingroger.github.io/raw/master/English%20Resume%20Roger%20LeMesurier.pdf">
 		<div class="container cards">
-			<br>
 			<div class="card">
 				<div class="skill-level">
-					<span></span>
+					<span>download</span>
 					<h2>Resume</h2>
 				</div>
-	</a>
-
 			<div class="skill-meta">
-				<h3>Resume</h3>
+				<h3></h3>
 				<span></span>
 			</div>
 		</div>
+	</a>
 		<div class="card">
 			<div class="skill-level">
 				<span></span>
@@ -105,7 +103,7 @@
 				<span></span>
 			</div>
 		</div>
-<!--
+
 		<div class="card">
 			<div class="skill-level">
 				<span>+</span>
@@ -158,7 +156,7 @@
 		</div>
 
 	</div>
-	-->
+
 <br>
 
 	<!-- Timeline -->
