--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 	  <li>
 	    <span class="point"></span>
 	    <p class="description">
-		      Mechanical Engineering <br>
-					B.S., UC Davis
+		      B.S. Mechanical Engineering<br>
+					UC Davis
 	    </p>
 	    <span class="date">2014 - 2010</span>
 	  </li>
