--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 	    <p class="line">Education</p>
 	    <span class="point"></span>
 	    <p class="description">
-	      Data Science with Python<br>
-				Codecademy
+	      5 years of firefighting<br>
+				@hardware startup
 	    </p>
 	    <span class="date">2020</span>
 	  </li>
