--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 	    <p class="line">Education</p>
 	    <span class="point"></span>
 	    <p class="description">
-	      5 years of firefighting<br>
-				@hardware startup
+	      5 scrappy years<br>
+				@small startup
 	    </p>
-	    <span class="date">2020</span>
+	    <span class="date">2020 - 2015</span>
 	  </li>
 
 	  <li>
