update to education

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 	    <p class="line">Education</p>
 	    <span class="point"></span>
 	    <p class="description">
-	      5 scrappy years<br>
-				@small startup
+	      Data science, <br>
+				HarvardX/DataCamp
 	    </p>
 	    <span class="date">2020 - 2015</span>
 	  </li>
