--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
 				B.S. Mechanical Engineering<br>
 				UC Davis
 	    </p>
-	    <span class="date">2020 - 2015</span>
+	    <span class="date">2014 - 2010</span>
 	  </li>
 
 	  <li>
 	    <span class="point"></span>
 	    <p class="description">
-				Data science, <br>
+				Data science <br>
 				HarvardX/DataCamp
 	    </p>
-	    <span class="date">2014 - 2010</span>
+	    <span class="date">2020 - 2015</span>
 	  </li>
 	</ol>
 </div>
