--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<li>
 			<span class="point"></span>
 			<p class="description">
-				Lead engineer, first hire <br>
+				Engineering lead, first hire <br>
 				@XStream Trucking
 			</p>
 			<span class="date">Jul. 2018 - Apr. 2015</span>
