--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
 			</p>
 			<span class="date">Jul. 2018 - Apr. 2015</span>
 		</li>
-
 	  <li>
 	    <p class="line">Education</p>
 	    <span class="point"></span>
@@ -109,16 +108,16 @@
 				B.S. Mechanical Engineering<br>
 				UC Davis
 	    </p>
-	    <span class="date">2014 - 2010</span>
+	    <span class="date">2010 - 2014</span>
 	  </li>
 
 	  <li>
 	    <span class="point"></span>
 	    <p class="description">
-				Data science <br>
+				Data Analytics courses <br>
 				HarvardX/DataCamp
 	    </p>
-	    <span class="date">2020 - 2015</span>
+	    <span class="date">2020</span>
 	  </li>
 	</ol>
 </div>
