--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
 	    <p class="line">Education</p>
 	    <span class="point"></span>
 	    <p class="description">
+
+				Data Analytics certificate <br>
+				Codecademy
+	    </p>
+	    <span class="date">2020</span>
+	  </li>
+	  <li>
+	    <span class="point"></span>
+	    <p class="description">
 				B.S. Mechanical Engineering<br>
 				UC Davis
 	    </p>
 	    <span class="date">2010 - 2014</span>
-	  </li>
-
-	  <li>
-	    <span class="point"></span>
-	    <p class="description">
-				Data Analytics courses <br>
-				HarvardX/DataCamp
-	    </p>
-	    <span class="date">2020</span>
 	  </li>
 	</ol>
 </div>
