added Sales eng profile to personal page

--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,7 @@
         Engineer, presenter, tinkerer, learner.
       </p>
       <ul class="social-links">
+        <li><a href="http://rogerlem.com">Sales Engineering profile</a></li>
         <li><a href="https://github.com/presentingroger">Github</a></li>
         <li><a href="http://linkedin.com/in/presentingroger">LinkedIn</a></li>
         <li><a href="https://angellist.com/presentingroger">Angellist</a></li>
