--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 
     <div class="right">
       <p class="bio">
-        Engineer, presenter, tinkerer, learner.
+        tinker — learn — engineer — share
       </p>
       <ul class="social-links">
         <li><a href="http://rogerlem.com">Sales Engineering profile</a></li>
