--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	    <p class="line">Education</p>
 	    <span class="point"></span>
 	    <p class="description">
-				Data Analytics certificate <br>
+				Data Analysis certificate <br>
 				Codecademy
 	    </p>
 	    <span class="date">2020</span>
