--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="list-card">
 				<span class="exp">+ 4 years</span>
 				<div>
-					<h3>Hardware development & delivery</h3>
+					<h3>Product development & delivery</h3>
 					<span>Design, manufacturing, production</span>
 				</div>
 			</div>
@@ -35,7 +35,7 @@
 			<div class="list-card">
 				<span class="exp">+ 3 years</span>
 				<div>
-					<h3>Ops and customer service</h3>
+					<h3>Ops + customer success</h3>
 					<span>Field engineering, data analysis, customer solutions</span>
 				</div>
 			</div>
@@ -44,7 +44,7 @@
 				<span class="exp">+ 6 years</span>
 				<div>
 					<h3>Professional communication</h3>
-					<span>Public speaker, tutor, teen crisis counselor</span>
+					<span>Public speaker, tutor, suicide counselor</span>
 				</div>
 			</div>
 
@@ -62,7 +62,7 @@
 
 				<div class="list-card">
 					<div>
-						<h3>Customer success</h3>
+						<h3>Client success</h3>
 						<span>Relationship building, solutions engineering</span>
 					</div>
 				</div>
