--- a/me.html
+++ b/me.html
@@ -1,33 +1,146 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/presentingroger/presentingroger.github.io/master/ico/favicon.ico">
+	<title>Roger LeMesurier</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/presentingroger/presentingroger.github.io/master/ico/favicon.ico">
 </head>
 <body>
-  <div class="wrapper">
 
-    <div class="left">
-      <img class="profile-picture" src="../img/pr.jpg" width="600"/>
-      <h1 class="name">Roger LeMesurier</h1>
-      <h4 class="subtitle">Engineering, Ops, Sales, Data</h4>
-      <h4 class="subtitle">San Francisco, CA</h4>
-    </div>
+	<div class="container">
+		<div class="hero">
+			<h1 class="name"><strong>Roger</strong> LeMesurier</h1>
+			<span class="job-title">Sales engineer</span>
+			<span class="email">roger.lemesurier@gmail.com</span>
 
-    <div class="right">
-      <p class="bio">
-        tinker — learn — engineer — share
-      </p>
-      <ul class="social-links">
-        <li><a href="http://rogerlem.com">Sales Engineering profile</a></li>
-        <li><a href="https://github.com/presentingroger">Github</a></li>
-        <li><a href="http://linkedin.com/in/presentingroger">LinkedIn</a></li>
-        <li><a href="https://angellist.com/presentingroger">Angellist</a></li>
-        <li><a href="https://stackoverflow.com/users/3791969/roger-l">Stack Overflow</a></li>
-        <li><a href="https://twitter.com/rogerlemesurier">Twitter</a></li>
-        <li><a href="https://open.spotify.com/playlist/1FBPUSwwem5vvN8RlA8tju?si=Zo_UXp1eTnG8b5mB0ybY6A">A playlist for you</a></li>
-      </ul>
-    </div>
+			<h2 class="lead">Engineering, analysis, and relationship management</h2>
+		</div>
+	</div>
 
-  </div>
+<!-- Skills and intrest section -->
+	<div class="container">
+
+		<div class="sections">
+			<h2 class="section-title">Skills</h2>
+
+			<div class="list-card">
+				<span class="exp">+ 4 years</span>
+				<div>
+					<h3>Product development & delivery</h3>
+					<span>Design, manufacturing, production</span>
+				</div>
+			</div>
+
+			<div class="list-card">
+				<span class="exp">+ 3 years</span>
+				<div>
+					<h3>Ops + customer success</h3>
+					<span>Field engineering, data analysis, customer solutions</span>
+				</div>
+			</div>
+
+			<div class="list-card">
+				<span class="exp">+ 6 years</span>
+				<div>
+					<h3>Professional communication</h3>
+					<span>Public speaker, tutor, suicide counselor</span>
+				</div>
+			</div>
+
+
+		</div>
+		<div class="sections">
+				<h2 class="section-title">Interests</h2>
+
+				<div class="list-card">
+					<div>
+						<h3>EVs and Energy systems</h3>
+						<span>Transportation, grid storage</span>
+					</div>
+				</div>
+
+				<div class="list-card">
+					<div>
+						<h3>Client success</h3>
+						<span>Relationship building, solutions engineering</span>
+					</div>
+				</div>
+
+				<div class="list-card">
+					<div>
+						<h3>Human capital</h3>
+						<span>People management, team dynamics</span>
+					</div>
+				</div>
+
+		</div>
+	</div>
+<br><br><br><br><br><br><br><br><br>
+
+	<!-- Timeline -->
+
+<div class="container">
+	<ol class="timeline">
+	  <li>
+	    <p class="line">Experiences</p>
+	    <span class="point"></span>
+	    <p class="description">
+				Field ops<br>
+				Customer support<br>
+				Data analyisis
+			</p>
+	    <span class="date">Jan 2020 - Jul. 2018</span>
+	  </li>
+
+		<li>
+			<span class="point"></span>
+			<p class="description">
+				Engineering lead, first hire <br>
+				@XStream Trucking
+			</p>
+			<span class="date">Jul. 2018 - Apr. 2015</span>
+		</li>
+	  <li>
+	    <p class="line">Education</p>
+	    <span class="point"></span>
+	    <p class="description">
+				Data Analysis certificate <br>
+				Codecademy
+	    </p>
+	    <span class="date">2020</span>
+	  </li>
+	  <li>
+	    <span class="point"></span>
+	    <p class="description">
+				B.S. Mechanical Engineering<br>
+				UC Davis
+	    </p>
+	    <span class="date">2010 - 2014</span>
+	  </li>
+	</ol>
+</div>
+
+
+<!-- Achievements -->
+<div class="container cards">
+	<a href="https://github.com/presentingroger/presentingroger.github.io/raw/master/English%20Resume%20Roger%20LeMesurier.pdf">
+		<div class="card">
+			<div class="skill-level">
+				<span>download</span>
+				<h2>Resume</h2>
+			</div>
+		</div>
+	</a>
+</div>
+
+
+	<footer class="container">
+		<br>
+		<br>
+		<span style="font-size: 10px; margin-top: ">Coded by <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a></span>
+	</footer>
+
+
 </body>
 </html>
