--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="left">
       <img class="profile-picture" src="../img/pr.jpg" width="600"/>
       <h1 class="name">Roger LeMesurier</h1>
-      <h4 class="subtitle">Organizing, Data</h4>
+      <h4 class="subtitle">Organizing communities, teams, and data</h4>
       <h4 class="subtitle">San Francisco, CA</h4>
     </div>
 
