--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <div class="right">
       <p class="bio">
-        tinker — learn — engineer — share
+        Now: Data Fellow with Corey Johnson for NYC Comptroller
+        frmr: FO in DeKalb for Ossoff/Warnock, Cedar Rapids for Biden/Greenfield, nationwide with TruckLabs.
       </p>
       <ul class="social-links">
         <li><a href="http://rogerlem.com">profile</a></li>
