--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="right">
       <p class="bio">
         Now: Data Fellow with Corey Johnson for NYC Comptroller
-        frmr: FO in DeKalb for Ossoff/Warnock, Cedar Rapids for Biden/Greenfield, nationwide with TruckLabs.
+        Previously: FO in DeKalb for Ossoff/Warnock, Cedar Rapids for Biden/Greenfield, nationwide with TruckLabs.
       </p>
       <ul class="social-links">
         <li><a href="http://rogerlem.com">profile</a></li>
