--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <p class="bio">
         Now: Data Fellow with Corey Johnson for NYC Comptroller
         Previously: FO in DeKalb for Ossoff/Warnock, Cedar Rapids for Biden/Greenfield, nationwide with TruckLabs.
+        Coming to a Data team near you.
       </p>
       <ul class="social-links">
         <li><a href="http://rogerlem.com">profile</a></li>
