--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         Coming to a Data team near you.
       </p>
       <ul class="social-links">
-        <li><a href="http://rogerlem.com">profile</a></li>
         <li><a href="https://github.com/presentingroger">Github</a></li>
+          <ul>
+            <li><a href="https://github.com/roger-lem/2021-NYC-election-data">2021-NYC-election-data</a></li>
         <li><a href="http://linkedin.com/in/presentingroger">LinkedIn</a></li>
         <li><a href="https://calendly.com/roger-lemesurier/">Calendly</a></li>
         <li><a href="https://stackoverflow.com/users/3791969/roger-l">Stack Overflow</a></li>
