--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
 
     <div class="right">
       <p class="bio">
-        Now: Data Fellow with Corey Johnson for NYC Comptroller
-      </br>
-        Previously: FO in DeKalb for Ossoff/Warnock, Cedar Rapids for Biden/Greenfield, nationwide with TruckLabs.
+        Now:
+        </br>
+        Data Fellow with Corey Johnson for NYC Comptroller
+        </br>
+        Previously:
+        </br>
+        FO in DeKalb for Ossoff/Warnock Cedar Rapids for Biden/Greenfield;
+        </br>
+        Eng/ops nationwide with TruckLabs.
         </p>
         Coming to a Data team near you.
       </p>
