--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         Now:
         </br>
         Data Fellow with Corey Johnson for NYC Comptroller
-        </br>
+        </br></br>
         Previously:
         </br>
-        FO in DeKalb for Ossoff/Warnock Cedar Rapids for Biden/Greenfield;
+        2020: FO in DeKalb for Ossoff/Warnock Cedar Rapids for Biden/Greenfield;
         </br>
-        Eng/ops nationwide with TruckLabs.
+        2015: Mechanical design, customer success, and data analytics with TruckWings.
         </p>
         Coming to a Data team near you.
       </p>
