--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </br></br>
         Previously:
         </br>
-        2020: FO in DeKalb for Ossoff/Warnock Cedar Rapids for Biden/Greenfield;
+        2020: FO in Cedar Rapids for Biden/Greenfield, DeKalb for Ossoff/Warnock
         </br>
-        2015: Mechanical design, customer success, and data analytics with TruckWings.
+        2015-2020: Mechanical design, customer success, and data analytics with TruckWings.
         </p>
         Coming to a Data team near you.
       </p>
