Revert "Update index.html"
This reverts commit 2dcae8e05d58fe3442f82a626f7e07eddb5176bb.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </br>
         2020: FO in Cedar Rapids for Biden/Greenfield, DeKalb for Ossoff/Warnock
         </br>
-        2015-2020: Mechanical design, customer success, and data analytics with <a href="https://www.truckwings.com/">TruckWings</a>.
+        2015-2020: Mechanical design, customer success, and data analytics with TruckWings.
         </p>
         Coming to a Data team near you.
       </p>
