--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         Coming to a Data team near you.
       </p>
       <ul class="social-links">
+      	Links:
         <li><a href="https://github.com/presentingroger">Github</a></li>
           <ul>
             <li><a href="https://github.com/roger-lem/2021-NYC-election-data">2021-NYC-election-data</a></li>
+          	<li><a href="https://github.com/roger-lem/small-campaign-toolkit">small-campaign-toolkit</a></li>
           </ul>
         <li><a href="http://linkedin.com/in/presentingroger">LinkedIn</a></li>
         <li><a href="https://calendly.com/roger-lemesurier/">Calendly</a></li>
