--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <ul class="social-links">
         <li><a href="https://github.com/presentingroger">Github</a></li>
           <ul>
-            <li><a href="https://github.com/roger-lem/2021-NYC-election-data">2021-NYC-election-data</a></li>
-          	<li><a href="https://github.com/roger-lem/small-campaign-toolkit">small-campaign-toolkit</a></li>
+            <li><a href="https://github.com/roger-lem/2021-NYC-election-data">2021 NYC election districts (precincts)</a></li>
+          	<li><a href="https://github.com/roger-lem/small-campaign-toolkit">Small Campaign Data Toolkit</a></li>
           </ul>
         <li><a href="http://linkedin.com/in/presentingroger">LinkedIn</a></li>
         <li><a href="https://calendly.com/roger-lemesurier/">Calendly</a></li>
