--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </br>
         2020: FO in Cedar Rapids for Biden/Greenfield, DeKalb for Ossoff/Warnock
         </br>
-        2015-2020: Mechanical design, customer success, and data analytics with <a href="https://www.truckwings.com/">TruckWings</a>
+        2015-2020: <a href="https://patents.google.com/patent/US20200307724A1">Engineering</a>, customer success, and data analytics for <a href="https://www.truckwings.com/">TruckWings</a>
         </p>
         Coming to a Data team near you.
       </p>
@@ -31,7 +31,7 @@
         <li><a href="https://github.com/presentingroger">Github</a></li>
           <ul>
             <li><a href="https://github.com/roger-lem/2021-NYC-election-data">2021 NYC election districts (precincts)</a></li>
-          	<li><a href="https://github.com/roger-lem/small-campaign-toolkit">Small Campaign Data Toolkit</a></li>
+          	<li><a href="https://github.com/roger-lem/small-campaign-toolkit">Small campaign data toolkit</a></li>
           </ul>
         <li><a href="http://linkedin.com/in/presentingroger">LinkedIn</a></li>
         <li><a href="https://calendly.com/roger-lemesurier/">Calendly</a></li>
