--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p class="bio">
         Now:
         </br>
-        Data Fellow with <a href="https://www.coreyfornyc.com/">Corey Johnson</a> for NYC Comptroller
+        Data with <a href="https://www.coreyfornyc.com/">Corey Johnson</a> for NYC Comptroller
         </br></br>
         Previously:
         </br>
