--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         Coming to a Data team near you.
       </p>
       <ul class="social-links">
-        <li><a href="https://github.com/presentingroger">Github</a></li>
+        <li><a href="https://github.com/roger-lem">Github</a></li>
           <ul>
             <li><a href="https://github.com/roger-lem/2021-NYC-election-data">2021 NYC election districts (precincts)</a></li>
           	<li><a href="https://github.com/roger-lem/small-campaign-toolkit">Small campaign data toolkit</a></li>
