--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 
     <div class="right">
       <p class="bio">
-        Now:
-        </br>
-        Data with <a href="https://www.coreyfornyc.com/">Corey Johnson</a> for NYC Comptroller
         </br></br>
         Previously:
+        </br>
+        2021: Data with <a href="https://www.coreyfornyc.com/">Corey Johnson</a> for NYC Comptroller
         </br>
         2020-2021: FO in Cedar Rapids for Biden/Greenfield, DeKalb for Ossoff/Warnock
         </br>
