--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="right">
       <p class="bio">
-        </br></br>
+        </br>
         Previously:
         </br>
         2021: Data with <a href="https://www.coreyfornyc.com/">Corey Johnson</a> for NYC Comptroller
@@ -24,6 +24,8 @@
         </br>
         2015-2020: <a href="https://patents.google.com/patent/US20200307724A1">Engineering</a>, customer success, and data analytics for <a href="https://www.truckwings.com/">TruckWings</a>
         </p>
+        Next:
+        </br>
         Coming to a Data team near you.
       </p>
       <ul class="social-links">
