adding language learning post

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="https://github.com/roger-lem/2021-NYC-election-data">2021 NYC election districts (precincts)</a></li>
           	<li><a href="https://github.com/roger-lem/small-campaign-toolkit">Small campaign data toolkit</a></li>
           </ul>
+        <li><a href="https://rogerlem.notion.site/Learning-new-languages-as-an-adult-378541f753dd47b0b94db95a9dbf89b0">Tips for language learners</a></li>
         <li><a href="http://linkedin.com/in/presentingroger">LinkedIn</a></li>
         <li><a href="https://calendly.com/roger-lemesurier/">Calendly</a></li>
         <li><a href="https://twitter.com/rogerlemesurier">Twitter</a></li>
