--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
     <div class="right">
       <p class="bio">
-        </br>
         Previously:
         </br>
         2021: Data with <a href="https://www.coreyfornyc.com/">Corey Johnson</a> for NYC Comptroller
@@ -26,7 +25,7 @@
         </p>
         Next:
         </br>
-        Coming to a Data team near you.
+        Coming to a data team near you.
       </p>
       <ul class="social-links">
         <li><a href="https://github.com/roger-lem">Github</a></li>
