--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <p class="bio">
         Previously:
         </br>
-        2021: Data with <a href="https://www.coreyfornyc.com/">Corey Johnson</a> for NYC Comptroller
+        2021: Data with <a href="https://www.coreyfornyc.com/">Corey Johnson</a> for NYC
         </br>
         2020-2021: FO in Cedar Rapids for Biden/Greenfield, DeKalb for Ossoff/Warnock
         </br>
-        2015-2020: <a href="https://patents.google.com/patent/US20200307724A1">Engineering</a>, customer success, and data analytics for <a href="https://www.truckwings.com/">TruckWings</a>
+        2015-2020: <a href="https://patents.google.com/patent/US20200307724A1" target="_blank" rel="noopener noreferrer">Engineering</a>, customer success, and data analytics for <a href="https://www.truckwings.com/">TruckWings</a>
         </p>
         Next:
         </br>
@@ -33,9 +33,9 @@
             <li><a href="https://github.com/roger-lem/2021-NYC-election-data">2021 NYC election districts (precincts)</a></li>
           	<li><a href="https://github.com/roger-lem/small-campaign-toolkit">Small campaign data toolkit</a></li>
           </ul>
-        <li><a href="https://rogerlem.notion.site/Writing-788ddebbd8324779bd5895c4460548a7">Writing</a></li>
+        <li><a href="https://rogerlem.notion.site/Writing-788ddebbd8324779bd5895c4460548a7 target="_blank" rel="noopener noreferrer"">Writing</a></li>
           <ul>
-            <li><a href="https://rogerlem.notion.site/Learning-new-languages-as-an-adult-378541f753dd47b0b94db95a9dbf89b0">My tips for second language learners</a></li>
+            <li><a href="https://rogerlem.notion.site/Learning-new-languages-as-an-adult-378541f753dd47b0b94db95a9dbf89b0 target="_blank" rel="noopener noreferrer"">My tips for second language learners</a></li>
           </ul>
         <li><a href="http://linkedin.com/in/presentingroger">LinkedIn</a></li>
         <li><a href="https://calendly.com/roger-lemesurier/">Calendly</a></li>
