--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="https://github.com/roger-lem/2021-NYC-election-data">2021 NYC election districts (precincts)</a></li>
           	<li><a href="https://github.com/roger-lem/small-campaign-toolkit">Small campaign data toolkit</a></li>
           </ul>
-        <li><a href="https://rogerlem.notion.site/Writing-788ddebbd8324779bd5895c4460548a7" target="_blank" rel="noopener noreferrer>Writing</a></li>
+        <li><a href="https://rogerlem.notion.site/Writing-788ddebbd8324779bd5895c4460548a7" target="_blank" rel="noopener noreferrer">Writing</a></li>
           <ul>
             <li><a href="https://rogerlem.notion.site/Learning-new-languages-as-an-adult-378541f753dd47b0b94db95a9dbf89b0" target="_blank" rel="noopener noreferrer">My tips for second language learners</a></li>
           </ul>
