--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </ul>
         <li><a href="https://rogerlem.notion.site/Writing-788ddebbd8324779bd5895c4460548a7" target="_blank" rel="noopener noreferrer">Writing</a></li>
           <ul>
-            <li><a href="https://rogerlem.notion.site/Dates-and-times-in-python-624718a8ce974a8db451506379a7f11e" target="_blank" rel="noopener noreferrer">Dates and times in python</a></li>
+            <li><a href="https://rogerlem.notion.site/Dates-and-times-in-python-624718a8ce974a8db451506379a7f11e" target="_blank" rel="noopener noreferrer">Manipulating dates and times in python</a></li>
             <li><a href="https://rogerlem.notion.site/Learning-new-languages-as-an-adult-378541f753dd47b0b94db95a9dbf89b0" target="_blank" rel="noopener noreferrer">My tips for second language learners</a></li>
           </ul>
         <li><a href="http://linkedin.com/in/presentingroger">LinkedIn</a></li>
